WebView should not hide its NativeViewHost when showing a crash overlay.

In r535735 we made WebView responsible for showing an overlay (like a
sad tab) when the WebContents has crashed. When the overlay was showing
we hid the NativeViewHost to be safe (using SetVisible(false)).
This had the unintended consequence of closing modal dialogs such
as a cookie dialog or dangerous download warning dialog.

In testing, it seems safe to not actually hide |holder_|, the
NativeViewHost. The overlay is absolute-positioned on top of it,
and it's not possible to focus the WebContents. This was more
or less true in the previous Sad Tab implementation where it
was displayed in a Widget on top of the WebView instead of as a
child View.

Bug: 826248, 821312
Change-Id: I748afeff1ac8d7e1fa18ccafe709706f803ae6cc
Reviewed-on: https://chromium-review.googlesource.com/1008621
Reviewed-by: Scott Violet <sky@chromium.org>
Commit-Queue: Dominic Mazzoni <dmazzoni@chromium.org>
Cr-Commit-Position: refs/heads/master@{#550742}
Former-commit-id: 2837c5891e07d0cd2afe61537b08706d2fef71e1